<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, JediDroidActivity!</string>
    <string name="app_name">JediDroid</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="multiplicacio">*</string>
    <string name="divisio">/</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="clearCalculator">C</string>
    <string name="number00">00</string>

</resources>